# swiss-citizens-abroad

./: .gitignore  README.md  bfs_publishing_schedule.py  data_sourcing.py  pyproject.toml
config/: logging_config.yaml
logs/: logging_config.yaml  logging_setup.py
src/: bfs_publishing_schedule.py  custom_type_annotations.py
src/postgre_sql_db/: BFS_PUBLICATIONS_createTable.sql
