[project]
name = "swiss-citizens-abroad"
version = "0.1.0"
description = ""
authors = [
    {name = "kmitiy",email = "kai.mitiy@outlook.com"}
]
readme = "README.md"
packages = [
    { include = "src/swiss-citizens-abroad" }
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
