[project]
name = "swiss-citizens-abroad"
version = "0.1.0"
description = ""
authors = [
    {name = "kmitiy",email = "kai.mitiy@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)"
]


[tool.poetry]
packages = [
    { include = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
